# MutsukiBotPlugins

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.agents/skills/mutsuki-bot-command/: SKILL.md
.agents/skills/mutsuki-bot-event-router/: SKILL.md
.agents/skills/mutsuki-bot-migration/: SKILL.md
.agents/skills/mutsuki-bot-protocol/: SKILL.md
.agents/skills/mutsuki-bot-sdk/: SKILL.md
.agents/skills/mutsuki-qqbot-adapter/: SKILL.md
.github/workflows/: performance-smoke.yml
artifacts/performance/reference-windows-x64/: report-analysis.json  report.approval.json  report.json
benchmarks/: workloads-v1.json
configs/: command.example.toml  permission.example.toml  qqbot.example.toml
crates/mutsuki-bot-benchmarks/: Cargo.toml
crates/mutsuki-bot-benchmarks/src/: cases.rs  main.rs  measurement.rs  reconnect.rs
crates/mutsuki-bot-config/: Cargo.toml
crates/mutsuki-bot-config-derive/: Cargo.toml
crates/mutsuki-bot-config-derive/src/: lib.rs
crates/mutsuki-bot-config/benches/: config_perf.rs
crates/mutsuki-bot-config/src/: budgets.rs  error.rs  expr.rs  json_schema.rs  lib.rs  lifecycle.rs  memory.rs  metrics.rs  migrate.rs  persist.rs  provider.rs  registry.rs  schema.rs  scope.rs  secret.rs  service.rs  validate.rs  value.rs  watch.rs
crates/mutsuki-bot-config/tests/: cli_fixture.rs  protocol.rs
crates/mutsuki-bot-link-parser/: Cargo.toml
crates/mutsuki-bot-link-parser/src/: lib.rs
crates/mutsuki-bot-protocol/: Cargo.toml
crates/mutsuki-bot-protocol/src/: account.rs  command.rs  error.rs  event.rs  lib.rs  media.rs  message.rs  permission.rs  segment.rs  subscription.rs  target.rs
crates/mutsuki-bot-sdk/: Cargo.toml
crates/mutsuki-bot-sdk/src/: command.rs  context.rs  event_handler.rs  lib.rs  message_builder.rs  prelude.rs
crates/mutsuki-bot-service-host-integration/: Cargo.toml
crates/mutsuki-bot-service-host-integration/src/: bilibili.rs  bundle.rs  configured.rs  console_bridge.rs  event_source.rs  lib.rs
crates/mutsuki-bot-testkit/: Cargo.toml
crates/mutsuki-bot-testkit/src/: benchmark.rs  lib.rs
crates/mutsuki-bot-web-console/: Cargo.toml
crates/mutsuki-bot-web-console/assets/: console-bootstrap-config.js  console-shell-config.html  console-shell-overview.html  lilia-tokens.css  mutsuki-ui.css
crates/mutsuki-bot-web-console/src/: config_demo.rs  lib.rs  lifecycle.rs  product_config.rs  secret_status.rs  standalone.rs  watch_bridge.rs
crates/mutsuki-bot-web-console/tests/: console_smoke.rs  lifecycle_reload.rs
crates/mutsuki-plugin-bot-adapter-qqbot/: Cargo.toml  plugin.toml
crates/mutsuki-plugin-bot-adapter-qqbot/src/: bundle.rs  config.rs  lib.rs  tests.rs
crates/mutsuki-plugin-bot-adapter-qqbot/src/adapter/: event_map.rs  media_map.rs  message_map.rs  mod.rs  redaction.rs  segment_map.rs  target_map.rs
crates/mutsuki-plugin-bot-adapter-qqbot/src/api/: client.rs  error.rs  media.rs  message.rs  mod.rs  payload.rs  service.rs  transport.rs
crates/mutsuki-plugin-bot-adapter-qqbot/src/gateway/: connection.rs  event_source.rs  mod.rs
crates/mutsuki-plugin-bot-adapter-qqbot/src/tasks/: mod.rs
crates/mutsuki-plugin-bot-bilibili/: Cargo.toml
crates/mutsuki-plugin-bot-bilibili-web/: Cargo.toml
crates/mutsuki-plugin-bot-bilibili-web/assets/: index.js
crates/mutsuki-plugin-bot-bilibili-web/src/: lib.rs
crates/mutsuki-plugin-bot-bilibili-workshop/: Cargo.toml
crates/mutsuki-plugin-bot-bilibili-workshop/src/: lib.rs
crates/mutsuki-plugin-bot-bilibili/src/: lib.rs  management.rs  open_platform.rs
crates/mutsuki-plugin-bot-command/: Cargo.toml  plugin.toml
crates/mutsuki-plugin-bot-command/src/: context.rs  dispatch.rs  lib.rs  matcher.rs  parser.rs
crates/mutsuki-plugin-bot-config-web/: Cargo.toml
crates/mutsuki-plugin-bot-config-web/assets/: bootstrap.js  index.js  lilia-tokens.css  shell.html
crates/mutsuki-plugin-bot-config-web/src/: lib.rs
crates/mutsuki-plugin-bot-config-web/tests/: web_e2e.rs
crates/mutsuki-plugin-bot-control-web/: Cargo.toml
crates/mutsuki-plugin-bot-control-web/src/: lib.rs
crates/mutsuki-plugin-bot-control-web/tests/: web_e2e.rs
crates/mutsuki-plugin-bot-event-router/: Cargo.toml  plugin.toml
crates/mutsuki-plugin-bot-mihuashi/: Cargo.toml
crates/mutsuki-plugin-bot-overview-web/: Cargo.toml
crates/mutsuki-plugin-bot-overview-web/assets/: bootstrap.js  index.js  lilia-tokens.css  mutsuki-ui.css  shell.html
crates/mutsuki-plugin-bot-overview-web/src/: lib.rs
crates/mutsuki-plugin-bot-overview-web/tests/: web_e2e.rs
crates/mutsuki-plugin-bot-upgrade-web/: Cargo.toml
crates/mutsuki-plugin-bot-upgrade-web/src/: lib.rs
crates/mutsuki-plugin-bot-upgrade-web/tests/: web_e2e.rs
crates/mutsuki-plugin-catalog/: Cargo.toml
crates/mutsuki-plugin-catalog/src/: execute.rs  lib.rs  release_set.rs  upgrade.rs
crates/mutsuki-plugin-catalog/tests/: upgrade_e2e.rs
crates/mutsuki-plugin-catalog/tests/fixtures/: release-set.toml
docs/: architecture.md  bilibili-management.md  bilibili-open-platform.md  bilibili-risk-control.md  command-plugin.md  config-schema.md  event-router.md  migration.md  performance-model-issue10.md  protocol.md  qqbot-adapter.md
examples/bot-echo/: Cargo.toml  README.md
examples/bot-echo/src/: lib.rs
examples/config-demo/: Cargo.toml
examples/config-demo/src/: main.rs
examples/qqbot-echo/: Cargo.toml  README.md
examples/qqbot-echo/src/: lib.rs  main.rs
examples/service-host-example/: Cargo.toml  README.md
examples/service-host-example/src/: main.rs
examples/service-host-example/tests/: qqbot_service.rs
schemas/bot-event/: v1.schema.json
schemas/bot-message/: v1.schema.json
schemas/bot-plugin-manifest/: v1.schema.json
schemas/bot-segment/: v1.schema.json
schemas/bot-target/: v1.schema.json
schemas/qqbot-config/: v1.schema.json
scripts/: run-performance-model.py  sync-mutsuki-ui-css.sh
skills/bot-protocol-sdk/: SKILL.md
skills/bot-testing/: SKILL.md
skills/event-routing-command/: SKILL.md
skills/platform-adapters/: SKILL.md
skills/qqbot-documentation/: SKILL.md
skills/service-host-integration/: SKILL.md
(+6 files in other folders)
