[workspace]
members = [
    "crates/mutsuki-bot-protocol",
    "crates/mutsuki-bot-sdk",
    "crates/mutsuki-plugin-bot-event-router",
    "crates/mutsuki-plugin-bot-command",
    "crates/mutsuki-plugin-bot-adapter-qqbot",
    "crates/mutsuki-bot-service-host-integration",
    "crates/mutsuki-bot-testkit",
    "crates/mutsuki-bot-link-parser",
    "crates/mutsuki-plugin-bot-bilibili",
    "crates/mutsuki-plugin-bot-bilibili-workshop",
    "crates/mutsuki-plugin-bot-mihuashi",
    "examples/bot-echo",
    "examples/qqbot-echo",
    "examples/service-host-example",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
mutsuki-runtime-contracts = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "d605333516753a797ca7e9971d097ac3e0de0c59" }
mutsuki-runtime-core = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "d605333516753a797ca7e9971d097ac3e0de0c59" }
mutsuki-runtime-host = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "d605333516753a797ca7e9971d097ac3e0de0c59" }
mutsuki-runtime-sdk = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "d605333516753a797ca7e9971d097ac3e0de0c59" }
mutsuki-service-config = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "a48a5248289e91d517c5b3e84e56221a3f71a690" }
mutsuki-service-control = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "a48a5248289e91d517c5b3e84e56221a3f71a690" }
mutsuki-service-ipc = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "a48a5248289e91d517c5b3e84e56221a3f71a690" }
mutsuki-service-runtime = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "a48a5248289e91d517c5b3e84e56221a3f71a690", default-features = false }
mutsuki-bot-protocol = { path = "crates/mutsuki-bot-protocol" }
mutsuki-bot-sdk = { path = "crates/mutsuki-bot-sdk" }
mutsuki-plugin-bot-adapter-qqbot = { path = "crates/mutsuki-plugin-bot-adapter-qqbot" }
mutsuki-plugin-bot-command = { path = "crates/mutsuki-plugin-bot-command" }
mutsuki-plugin-bot-event-router = { path = "crates/mutsuki-plugin-bot-event-router" }
mutsuki-bot-service-host-integration = { path = "crates/mutsuki-bot-service-host-integration" }
mutsuki-bot-testkit = { path = "crates/mutsuki-bot-testkit" }
mutsuki-bot-link-parser = { path = "crates/mutsuki-bot-link-parser" }
mutsuki-plugin-bot-bilibili = { path = "crates/mutsuki-plugin-bot-bilibili" }
mutsuki-plugin-bot-bilibili-workshop = { path = "crates/mutsuki-plugin-bot-bilibili-workshop" }
mutsuki-plugin-bot-mihuashi = { path = "crates/mutsuki-plugin-bot-mihuashi" }
mutsuki-protocol-browser = { git = "https://github.com/sena-nana/MutsukiStdPlugins.git", rev = "fd7e5bc20aa0d3546decf9e777a88a06121d37f6" }
bot-echo = { path = "examples/bot-echo" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["parsing"] }
fastrand = "2.4"
hmac = "0.12"
futures-util = "0.3"
html-escape = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls", "stream"] }
md5 = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
qrcode = { version = "0.14", default-features = false, features = ["image"] }
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing = "0.1"
url = "2.5"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.23"

[profile.dev]
debug = "line-tables-only"
incremental = true

[profile.dev.package."*"]
opt-level = 1
