[workspace]
members = [
    "crates/mutsuki-bot-protocol",
    "crates/mutsuki-bot-sdk",
    "crates/mutsuki-bot-config",
    "crates/mutsuki-bot-config-derive",
    "crates/mutsuki-plugin-bot-config-web",
    "crates/mutsuki-plugin-bot-control-web",
    "crates/mutsuki-plugin-bot-overview-web",
    "crates/mutsuki-plugin-bot-upgrade-web",
    "crates/mutsuki-plugin-catalog",
    "crates/mutsuki-bot-web-console",
    "crates/mutsuki-plugin-bot-event-router",
    "crates/mutsuki-plugin-bot-command",
    "crates/mutsuki-plugin-bot-adapter-qqbot",
    "crates/mutsuki-bot-service-host-integration",
    "crates/mutsuki-bot-testkit",
    "crates/mutsuki-bot-link-parser",
    "crates/mutsuki-bot-benchmarks",
    "crates/mutsuki-plugin-bot-bilibili",
    "crates/mutsuki-plugin-bot-bilibili-workshop",
    "crates/mutsuki-plugin-bot-mihuashi",
    "examples/bot-echo",
    "examples/qqbot-echo",
    "examples/service-host-example",
    "examples/config-demo",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
mutsuki-runtime-contracts = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "0e07be963aee996283d5ae702e3a8153de1e417b" }
mutsuki-runtime-core = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "0e07be963aee996283d5ae702e3a8153de1e417b" }
mutsuki-runtime-host = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "0e07be963aee996283d5ae702e3a8153de1e417b" }
mutsuki-runtime-sdk = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "0e07be963aee996283d5ae702e3a8153de1e417b" }
mutsuki-service-config = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "b06e2107dc2d0887406afb89d8d4a25f9383fb2e" }
mutsuki-service-control = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "b06e2107dc2d0887406afb89d8d4a25f9383fb2e" }
mutsuki-service-link = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "b06e2107dc2d0887406afb89d8d4a25f9383fb2e" }
mutsuki-service-ipc = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "b06e2107dc2d0887406afb89d8d4a25f9383fb2e" }
mutsuki-service-runtime = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "b06e2107dc2d0887406afb89d8d4a25f9383fb2e", default-features = false }
mutsuki-bot-protocol = { path = "crates/mutsuki-bot-protocol" }
mutsuki-bot-sdk = { path = "crates/mutsuki-bot-sdk" }
mutsuki-bot-config = { path = "crates/mutsuki-bot-config" }
mutsuki-bot-config-derive = { path = "crates/mutsuki-bot-config-derive" }
mutsuki-plugin-bot-config-web = { path = "crates/mutsuki-plugin-bot-config-web" }
mutsuki-plugin-bot-control-web = { path = "crates/mutsuki-plugin-bot-control-web" }
mutsuki-plugin-bot-overview-web = { path = "crates/mutsuki-plugin-bot-overview-web" }
mutsuki-plugin-bot-upgrade-web = { path = "crates/mutsuki-plugin-bot-upgrade-web" }
mutsuki-plugin-catalog = { path = "crates/mutsuki-plugin-catalog" }
mutsuki-bot-web-console = { path = "crates/mutsuki-bot-web-console" }
mutsuki-web-protocol = { git = "https://github.com/sena-nana/MutsukiWebHost.git", rev = "aa35448c9adacd2510f394821d9c14876848bf16" }
mutsuki-web-extension = { git = "https://github.com/sena-nana/MutsukiWebHost.git", rev = "aa35448c9adacd2510f394821d9c14876848bf16" }
mutsuki-web-host = { git = "https://github.com/sena-nana/MutsukiWebHost.git", rev = "aa35448c9adacd2510f394821d9c14876848bf16" }
mutsuki-web-bridge = { git = "https://github.com/sena-nana/MutsukiWebHost.git", rev = "aa35448c9adacd2510f394821d9c14876848bf16" }
parking_lot = "0.12"
async-trait = "0.1"
mutsuki-plugin-bot-adapter-qqbot = { path = "crates/mutsuki-plugin-bot-adapter-qqbot" }
mutsuki-plugin-bot-command = { path = "crates/mutsuki-plugin-bot-command" }
mutsuki-plugin-bot-event-router = { path = "crates/mutsuki-plugin-bot-event-router" }
mutsuki-bot-service-host-integration = { path = "crates/mutsuki-bot-service-host-integration" }
mutsuki-bot-testkit = { path = "crates/mutsuki-bot-testkit" }
mutsuki-bot-link-parser = { path = "crates/mutsuki-bot-link-parser" }
mutsuki-plugin-bot-bilibili = { path = "crates/mutsuki-plugin-bot-bilibili" }
mutsuki-plugin-bot-bilibili-workshop = { path = "crates/mutsuki-plugin-bot-bilibili-workshop" }
mutsuki-plugin-bot-mihuashi = { path = "crates/mutsuki-plugin-bot-mihuashi" }
mutsuki-protocol-browser = { git = "https://github.com/sena-nana/MutsukiStdPlugins.git", rev = "4ed0f8ec2b2ed22041efb362d6754e1c32d527e9" }
bot-echo = { path = "examples/bot-echo" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["parsing"] }
fastrand = "2.4"
hmac = "0.12"
futures-util = "0.3"
html-escape = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls", "stream"] }
md5 = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
qrcode = { version = "0.14", default-features = false, features = ["image"] }
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
toml = "0.8"
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing = "0.1"
url = "2.5"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.23"

[workspace.dependencies.libc]
version = "0.2"

[workspace.dependencies.windows-sys]
version = "0.61"
features = ["Win32_Foundation", "Win32_System_Threading"]

[profile.dev]
debug = "line-tables-only"
incremental = true

[profile.dev.package."*"]
opt-level = 1
