[package]
name = "mutsuki-bot-config-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "#[derive(MutsukiConfig)] for Schema-first Bot plugin configuration."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
serde_json = "1"
