[package]
name = "mutsuki-bot-service-host-integration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core.workspace = true
mutsuki-bot-protocol.workspace = true
mutsuki-service-config.workspace = true
mutsuki-service-runtime.workspace = true
mutsuki-plugin-bot-command.workspace = true
mutsuki-plugin-bot-event-router.workspace = true
mutsuki-plugin-bot-adapter-qqbot.workspace = true
fastrand.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
