[package]
name = "mutsuki-bot-web-console"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embedded Bot admin console assembly: WebHost + control/overview/config extensions."

[dependencies]
mutsuki-bot-config = { workspace = true }
mutsuki-plugin-bot-config-web = { workspace = true }
mutsuki-plugin-bot-control-web = { workspace = true }
mutsuki-plugin-bot-upgrade-web = { workspace = true }
mutsuki-plugin-bot-overview-web = { workspace = true }
mutsuki-service-control = { workspace = true }
mutsuki-service-link = { workspace = true }
mutsuki-web-host = { workspace = true }
mutsuki-web-extension = { workspace = true }
mutsuki-web-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
mutsuki-service-control = { workspace = true }
mutsuki-service-link = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect"] }
uuid = { version = "1", features = ["v4"] }
rcgen = "0.13"
