[package]
name = "mutsuki-plugin-bot-adapter-qqbot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core.workspace = true
mutsuki-runtime-sdk.workspace = true
mutsuki-bot-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
