[package]
name = "mutsuki-plugin-bot-adapter-qqbot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core.workspace = true
mutsuki-runtime-sdk.workspace = true
mutsuki-service-runtime.workspace = true
mutsuki-bot-protocol.workspace = true
fastrand.workspace = true
futures-util.workspace = true
html-escape.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
url.workspace = true
