[package]
name = "mutsuki-plugin-bot-bilibili-workshop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-bot-link-parser.workspace = true
mutsuki-bot-protocol.workspace = true
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core.workspace = true
mutsuki-runtime-sdk.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
