[package]
name = "mutsuki-plugin-bot-config-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Default Web config plugin: ConfigProvider RPC + auto form WebExtension assets."

[dependencies]
mutsuki-bot-config = { workspace = true }
mutsuki-web-protocol = { workspace = true }
mutsuki-web-extension = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
futures-executor = "0.3"

[dev-dependencies]
mutsuki-web-host = { workspace = true }
mutsuki-web-bridge = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect"] }
futures-util = { workspace = true }
