[package]
name = "mutsuki-plugin-bot-overview-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web overview console: system status, runtime structure, task/runner counts, and uptime."

[dependencies]
mutsuki-service-control = { workspace = true }
mutsuki-web-protocol = { workspace = true }
mutsuki-web-extension = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures-executor = "0.3"

[dev-dependencies]
mutsuki-web-host = { workspace = true }
mutsuki-web-bridge = { workspace = true }
mutsuki-plugin-bot-config-web = { workspace = true }
mutsuki-bot-config = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect"] }
futures-util = { workspace = true }
