[package]
name = "mutsuki-plugin-bot-upgrade-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bot auto-upgrade WebExtension: release set pin checks, Git fetch/build/ABI planning."

[dependencies]
mutsuki-plugin-bot-control-web = { workspace = true }
mutsuki-plugin-catalog = { workspace = true }
mutsuki-web-extension = { workspace = true }
mutsuki-web-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
mutsuki-plugin-catalog = { workspace = true }
mutsuki-web-host = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect"] }
uuid = { version = "1", features = ["v4"] }
