[package]
name = "bot-echo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-bot-protocol.workspace = true
mutsuki-bot-sdk.workspace = true
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core.workspace = true
mutsuki-runtime-sdk.workspace = true
serde_json.workspace = true
tracing.workspace = true
