[package]
name = "config-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "config-demo"
path = "src/main.rs"

[dependencies]
mutsuki-bot-config = { workspace = true }
mutsuki-plugin-bot-config-web = { workspace = true }
mutsuki-web-host = { workspace = true }
mutsuki-web-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tempfile = { workspace = true }
