[package]
name = "service-host-example"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-bot-protocol.workspace = true
mutsuki-bot-sdk.workspace = true
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-host.workspace = true
mutsuki-runtime-sdk.workspace = true
qqbot-echo = { path = "../qqbot-echo" }
serde_json.workspace = true

[dev-dependencies]
bot-echo.workspace = true
mutsuki-service-config.workspace = true
mutsuki-service-control.workspace = true
mutsuki-service-ipc.workspace = true
mutsuki-service-runtime.workspace = true
mutsuki-plugin-bot-adapter-qqbot.workspace = true
mutsuki-bot-service-host-integration.workspace = true
mutsuki-plugin-bot-command.workspace = true
mutsuki-plugin-bot-event-router.workspace = true
futures-util.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tempfile = "3"
